--- a/week1/personalassignment2/package.json
+++ b/week1/personalassignment2/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Elias-Yuri-Maximo/CSE342-BackendDev#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1"
