--- a/week4/PersonalAssingment7/package.json
+++ b/week4/PersonalAssingment7/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Elias-Yuri-Maximo/CSE342-BackendDev#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
